<resources>
    <string name="app_name">kuangjia</string>
    <string name="fragment_name_1">模块1</string>
    <string name="fragment_name_2">模块2</string>
    <string name="fragment_name_3">模块3</string>
    <string name="fragment_name_4">模块4</string>
    <string name="fragment_name_5">模块5</string>

    <string name="title_popup1">popup1</string>
    <string name="title_popup2">popup2</string>
    <string name="title_popup3">popup3</string>
    <string name="title_popup4">popup4</string>

    <string name="title_left_menu">左按钮</string>
    <string name="title_right_menu">右按钮</string>

</resources>
