<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <!-- 普通底部导航 -->

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/re_tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_first" />

                <TextView
                    android:id="@+id/tv_tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_tab1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/fragment_name_1"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv_tab_number1"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_tab2"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_second" />

                <TextView
                    android:id="@+id/tv_tab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_tab2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/fragment_name_2"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tab_number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text="999"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                   />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_tab3"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_third" />

                <TextView
                    android:id="@+id/tv_tab3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_tab3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/fragment_name_3"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tab_number3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/re_tab4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_tab4"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_fourth" />

                <TextView
                    android:id="@+id/tv_tab4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_tab4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/fragment_name_4"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tab_number4"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/re_tab5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_tab5"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_fourth" />

                <TextView
                    android:id="@+id/tv_tab5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_tab5"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/fragment_name_5"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_tab_number5"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/aii"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>